# handlr

./: Cargo.toml  README.md
assets/completions/: _handlr  handlr  handlr.fish
assets/manual/man1/: handlr-add.1  handlr-get.1  handlr-launch.1  handlr-list.1  handlr-mime.1  handlr-open.1  handlr-set.1  handlr-unset.1  handlr.1
handlr-regex/: Cargo.toml
handlr-regex/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  utils.rs
handlr-regex/src/apps/: mod.rs  regex.rs  user.rs
handlr-regex/src/common/: desktop_entry.rs  handler.rs  ini.pest  mime_types.rs  mod.rs  path.rs
src/apps/: system.rs
src/common/: handler.rs  mime_types.rs  path.rs
xtask/: Cargo.toml
xtask/src/: main.rs
