[package]
name = "handlr-regex"
version = "0.8.0"
authors = ["Duncan Russell <Duncan@anomalocaris.xyz>", "Gregory <gregory.mkv@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Fork of handlr with regex support"
repository = "https://github.com/Anomalocaridid/handlr-regex"

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
clap = { version = "3.0.0-beta.2", features = ["derive"] }
url = "2.2.1"
itertools = "0.10.0"
json = "0.12.4"
shlex = "1.0.0"
thiserror = "1.0.24"
ascii_table = "3.0.2"
xdg = "2.2.0"
mime = "0.3.16"
mime-db = "1.3.0"
atty = "0.2.14"
confy = "0.4.0"
serde = { version = "1.0.125", features = ["derive"] }
xdg-mime = "0.3.3"
freedesktop_entry_parser = "1.1.1"
once_cell = "1.7.2"
aho-corasick = "0.7.15"
regex = "1"

[[bin]]
name = "handlr"
path = "src/main.rs"
